v8.dev: wrong height for span in grid listing https://bugs.webkit.org/show_bug.cgi?id=293179 <rdar://problem/151655455>

Reviewed by Antti Koivisto.

Do not dismiss empty block containers as list marker parent candidates.

In findParentOfEmptyOrFirstLineBox, we travers the list item's subtree to find
an insertion position for the list marker.
While the first block container with inline content is the preferred insertion point,
skipping empty block containers results in constructing anonymous block parent.
(inline level list marker next to (empty) block level container)
We should also consider block containers with inline boxes even when they
do not generate visible content (e.g. <div><span></span></div>).

This patch introduces the concept of 'fallback parent' which is used when
no candidate with inline content is found.

* LayoutTests/fast/inline/list-item-marker-with-empty-list-expected.html: Added.
* LayoutTests/fast/inline/list-item-marker-with-empty-list.html: Added.
* Source/WebCore/rendering/updating/RenderTreeBuilderList.cpp:
(WebCore::parentCandidateForMarker):
(WebCore::RenderTreeBuilder::List::updateItemMarker):
(WebCore::getParentOfFirstLineBox): Deleted.

Canonical link: https://commits.webkit.org/295819@main